feat: 临时提交, 任务栏增加显示文字功能

--- a/WordHelper/WordHelper.vcxproj
+++ b/WordHelper/WordHelper.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TaskBarView.h" />
     <ClInclude Include="WordHelper.h" />
     <ClInclude Include="WordHelperDlg.h" />
   </ItemGroup>
@@ -197,6 +198,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TaskBarView.cpp" />
     <ClCompile Include="WordHelper.cpp" />
     <ClCompile Include="WordHelperDlg.cpp" />
   </ItemGroup>
