--- a/WordHelper/WordHelper.vcxproj.filters
+++ b/WordHelper/WordHelper.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="任务栏">
+      <UniqueIdentifier>{a7f493d8-b7b2-4a87-aa71-d47e72a0c508}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WordHelper.h">
@@ -33,6 +36,9 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TaskBarView.h">
+      <Filter>任务栏</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WordHelper.cpp">
@@ -43,6 +49,9 @@
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskBarView.cpp">
+      <Filter>任务栏</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
