--- a/WordHelper/WordHelper.vcxproj
+++ b/WordHelper/WordHelper.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\libcpr.1.10.1\build\native\libcpr.props" Condition="Exists('..\packages\libcpr.1.10.1\build\native\libcpr.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -206,6 +207,7 @@
     <ResourceCompile Include="WordHelper.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="res\WordHelper.rc2" />
   </ItemGroup>
   <ItemGroup>
@@ -213,5 +215,13 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\libcpr.1.10.1\build\native\libcpr.targets" Condition="Exists('..\packages\libcpr.1.10.1\build\native\libcpr.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\libcpr.1.10.1\build\native\libcpr.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcpr.1.10.1\build\native\libcpr.props'))" />
+    <Error Condition="!Exists('..\packages\libcpr.1.10.1\build\native\libcpr.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcpr.1.10.1\build\native\libcpr.targets'))" />
+  </Target>
 </Project>
