--- a/WordHelper/WordHelper.vcxproj.filters
+++ b/WordHelper/WordHelper.vcxproj.filters
@@ -63,6 +63,7 @@
     <None Include="res\WordHelper.rc2">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\WordHelper.ico">
